updated admin/manage orders and manage users pages
