# src/main/frontend/api-docs.yaml
@@ -793,6 +793,37 @@ paths:
             application/json:
               schema:
                 type: object
+  /users/setRole:
+    post:
+      tags:
+      - user-controller
+      operationId: setRole
+      parameters:
+      - name: userId
+        in: query
+        required: true
+        schema:
+          type: integer
+          format: int64
+      - name: roleIds
+        in: query
+        required: true
+        schema:
+          type: array
+          items:
+            type: integer
+            format: int64
+      responses:
+        "404":
+          description: Not Found
+          content:
+            application/json:
+              schema:
+                type: string
+        "200":
+          description: OK
+      security:
+      - Bearer_Authentication: []
   /users/sendPswResetRequest:
     post:
       tags:
@@ -1278,6 +1309,57 @@ paths:
                   $ref: '#/components/schemas/UserDto'
       security:
       - Bearer_Authentication: []
+  /users/{userId}/roles:
+    get:
+      tags:
+      - user-controller
+      operationId: getUserRoles
+      parameters:
+      - name: userId
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int64
+      responses:
+        "404":
+          description: Not Found
+          content:
+            application/json:
+              schema:
+                type: string
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/RoleDto'
+      security:
+      - Bearer_Authentication: []
+  /users/roles:
+    get:
+      tags:
+      - user-controller
+      operationId: getRoles
+      responses:
+        "404":
+          description: Not Found
+          content:
+            application/json:
+              schema:
+                type: string
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/RoleDto'
+      security:
+      - Bearer_Authentication: []
   /users/me:
     get:
       tags:
@@ -1761,6 +1843,14 @@ components:
         username:
           type: string
         password:
+          type: string
+    RoleDto:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        name:
           type: string
     ResponseFile:
       type: object
